// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generate provider functions covering variadic parameters, primitive/list returns, and a 'default' parameter name: example-provider-functions 1`] = `
"// generated from provider function schema

import * as cdktn from 'cdktn';

/**
* Provider-defined functions of the example provider.
*/
export class ExampleProviderFunctions {

  /**
  * Returns true_value if condition is true, otherwise returns false_value. The dynamic return type allows either branch to be a value of any type.
  * Note: provider-defined functions are evaluated by the provider itself — do not call this inside the configuration of the same provider (Terraform reports a self-referential cycle).
  * @param condition
  * @param trueValue
  * @param falseValue
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  public static conditionIf(condition: any, trueValue: any, falseValue: any, providerLocalName?: string): any {
    return cdktn.TerraformProviderFunction.invoke(providerLocalName ?? "example", "condition_if", [condition, trueValue, falseValue]);
  }

  /**
  * Joins the given strings together using the provided separator.
  * Note: provider-defined functions are evaluated by the provider itself — do not call this inside the configuration of the same provider (Terraform reports a self-referential cycle).
  * @param separator
  * @param values
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  public static joinStrings(separator: string, values: string[], providerLocalName?: string): string {
    return cdktn.Token.asString(cdktn.TerraformProviderFunction.invoke(providerLocalName ?? "example", "join_strings", [separator, ...values]));
  }

  /**
  * Returns a list of names prefixed with the given prefix.
  * Note: provider-defined functions are evaluated by the provider itself — do not call this inside the configuration of the same provider (Terraform reports a self-referential cycle).
  * @param prefix
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  public static listPrefixedNames(prefix: string, providerLocalName?: string): string[] {
    return cdktn.Token.asList(cdktn.TerraformProviderFunction.invoke(providerLocalName ?? "example", "list_prefixed_names", [prefix]));
  }

  /**
  * Adds up a default starting value and any number of addends.
  * Note: provider-defined functions are evaluated by the provider itself — do not call this inside the configuration of the same provider (Terraform reports a self-referential cycle).
  * @param defaultValue
  * @param addends
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  public static sum(defaultValue: number, addends: number[], providerLocalName?: string): number {
    return cdktn.Token.asNumber(cdktn.TerraformProviderFunction.invoke(providerLocalName ?? "example", "sum", [defaultValue, ...addends]));
  }
}
"
`;

exports[`generate provider functions covering variadic parameters, primitive/list returns, and a 'default' parameter name: provider-index 1`] = `
"// generated by cdktn get
export * as providerFunctions from './provider-functions/index';

"
`;

exports[`generate provider functions covering variadic parameters, primitive/list returns, and a 'default' parameter name: provider-lazy-index 1`] = `
"// generated by cdktn get
Object.defineProperty(exports, 'providerFunctions', { get: function () { return require('./provider-functions'); } });

"
`;

exports[`generate provider functions for the time provider (real terraform 1.15.6 schema fragment): provider-index 1`] = `
"// generated by cdktn get
export * as staticResource from './static-resource/index';
export * as providerFunctions from './provider-functions/index';

"
`;

exports[`generate provider functions for the time provider (real terraform 1.15.6 schema fragment): provider-lazy-index 1`] = `
"// generated by cdktn get
Object.defineProperty(exports, 'staticResource', { get: function () { return require('./static-resource'); } });
Object.defineProperty(exports, 'providerFunctions', { get: function () { return require('./provider-functions'); } });

"
`;

exports[`generate provider functions for the time provider (real terraform 1.15.6 schema fragment): time-provider-functions 1`] = `
"// generated from provider function schema

import * as cdktn from 'cdktn';

/**
* Provider-defined functions of the time provider.
*/
export class TimeProviderFunctions {

  /**
  * Given a [Go duration string](https://pkg.go.dev/time#ParseDuration), will parse and return an object representation of that duration.
  * Note: provider-defined functions are evaluated by the provider itself — do not call this inside the configuration of the same provider (Terraform reports a self-referential cycle).
  * @param duration Go time package duration string to parse
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  public static durationParse(duration: string, providerLocalName?: string): any {
    return cdktn.TerraformProviderFunction.invoke(providerLocalName ?? "time", "duration_parse", [duration]);
  }

  /**
  * Given an RFC3339 timestamp string, will parse and return an object representation of that date and time.
  * Note: provider-defined functions are evaluated by the provider itself — do not call this inside the configuration of the same provider (Terraform reports a self-referential cycle).
  * @param timestamp RFC3339 timestamp string to parse
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  public static rfc3339Parse(timestamp: string, providerLocalName?: string): any {
    return cdktn.TerraformProviderFunction.invoke(providerLocalName ?? "time", "rfc3339_parse", [timestamp]);
  }

  /**
  * Given a unix timestamp integer, will parse and return an object representation of that date and time. A unix timestamp is the number of seconds elapsed since January 1, 1970 UTC.
  * Note: provider-defined functions are evaluated by the provider itself — do not call this inside the configuration of the same provider (Terraform reports a self-referential cycle).
  * @param unixTimestamp Unix Timestamp integer to parse
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  public static unixTimestampParse(unixTimestamp: number, providerLocalName?: string): any {
    return cdktn.TerraformProviderFunction.invoke(providerLocalName ?? "time", "unix_timestamp_parse", [unixTimestamp]);
  }
}
"
`;
